--- a/css/style1.css
+++ b/css/style1.css
@@ -53,7 +53,7 @@ header{
     z-index: 1000;
     height: 100%;
     width: 35rem;
-    background: #44576d;
+    background: #8cb6ff;
     display: flex;
     align-items: center;
     justify-content: center;
